--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@vue/compiler-sfc": "^3.0.11",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "echarts": "^5.2.1",
     "element-plus": "^1.0.2-beta.71",
     "moment": "^2.29.1",
     "postcss": "^8.3.0",
