--- a/app/app.json
+++ b/app/app.json
@@ -1,9 +1,10 @@
 {
   "pages": [
     "pages/login/login",
+    "pages/main/mine/mine",
     "pages/main/home/home",
     "pages/main/classify/classify",
-    "pages/main/mine/mine",
+    "pages/browse/browse",
     "pages/main/cart/cart",
     "pages/product/detail/detail",
     "pages/order/order",
@@ -11,8 +12,7 @@
     "pages/address/list/list",
     "pages/address/add/add",
     "pages/address/edit/edit",
-    "pages/result/pay/pay",
-    "pages/footmark/footmark"
+    "pages/result/pay/pay"
   ],
   "window": {
     "backgroundTextStyle": "light",
